--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -108,38 +108,6 @@
                             </ul>
                         </li>
                         <li>
-                            <div class="repo-folder">presentation</div>
-                            <ul class="">
-                                <li>
-                                    <div class="repo-folder">img</div>
-                                    <ul class="">
-                                        <li>
-                                            <div class="repo-file">infinity-studios.png</div>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <div class="repo-folder">scripts</div>
-                                    <ul class="">
-                                        <li>
-                                            <div class="repo-file">presentation.js</div>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <div class="repo-folder">style</div>
-                                    <ul class="">
-                                        <li>
-                                            <div class="repo-file">presentation.css</div>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <div class="repo-file">presentation.html</div>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
                             <div class="repo-folder">scripts</div>
                             <ul class="">
                                 <li>
@@ -202,6 +170,41 @@
                         </li>
                         <li>
                             <div class="repo-folder">style</div>
+                            <ul class="">
+                                <li>
+                                    <div class="repo-file">editpost.css</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">landing.css</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">login.css</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">lostaccount.css</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">myprofile.css</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">newsfeed.css</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">register.css</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">style.css</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">userprofile.css</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">viewpost.css</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">writepost.css</div>
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <div class="repo-file">index.html</div>
