--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -213,7 +213,9 @@
                 </div>
                 <div class="content-right devlog-1-right flex-column-right">
                     <h1 class="content-title devlog-1-title">저희는 개발을 합니다.</h1>
-                    <p class="content-text devlog-1-text">그렇다고 합니다.</p>
+                    <p class="content-text devlog-1-text">첫째, 구조화된 개발을 했습니다.</p>
+                    <p class="content-text devlog-1-text">둘째, 필요에 의한 개발을 했습니다.</p>
+                    <p class="content-text devlog-1-text">셋째, 개발을 했습니다.</p>
                     <button class="content-button devlog-1-button">SEE MORE</button>
 
                 </div>
