--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -212,10 +212,8 @@
                     </ul>
                 </div>
                 <div class="content-right devlog-1-right flex-column-right">
-                    <h1 class="content-title devlog-1-title">저희는 개발을 합니다.</h1>
-                    <p class="content-text devlog-1-text">첫째, 구조화된 개발을 했습니다.</p>
-                    <p class="content-text devlog-1-text">둘째, 필요에 의한 개발을 했습니다.</p>
-                    <p class="content-text devlog-1-text">셋째, 개발을 했습니다.</p>
+                    <h1 class="content-title devlog-1-title">개발 과정을 소개합니다.</h1>
+                    <p class="content-text devlog-1-text">첫째, 파일 분류를 한 뒤 코딩을 시작했습니다.</p>
                     <button class="content-button devlog-1-button">SEE MORE</button>
 
                 </div>
@@ -224,23 +222,23 @@
         <div class="content-wrap devlog-2-container">
             <div class="content-inner devlog-2-content-inner">
                 <div class="content-left devlog-2-left flex-column-left">
-                    <h1 class="content-title devlog-2-title">제목</h1>
-                    <p class="content-text devlog-2-text">내용</p>
+                    <h1 class="content-title devlog-2-title">버그 고치는 중...</h1>
+                    <p class="content-text devlog-2-text">둘째, 버그를 고치며 필수 기능을 구현했습니다.</p>
                     <button class="content-button devlog-2-button">SEE MORE</button>
                 </div>
                 <div class="content-right devlog-2-right">
-                    something
+                    <img class="main-content devlog-2-main-image" src="img/crud-pages.png">
                 </div>
             </div>
         </div>
         <div class="content-wrap devlog-3-container">            
             <div class="content-inner devlog-3-content-inner">
                 <div class="content-left devlog-3-left">
-                    something
+                    <img class="main-content devlog-3-main-image" src="img/crud-codes.png">
                 </div>
                 <div class="content-right devlog-3-right flex-column-right">
-                    <h1 class="content-title devlog-3-title">제목</h1>
-                    <p class="content-text devlog-3-text">내용</p>
+                    <h1 class="content-title devlog-3-title">반쯤 포기한 상태</h1>
+                    <p class="content-text devlog-3-text">셋째, 필수 기능 다 구현하고 뻗었습니다.</p>
                     <button class="content-button devlog-3-button">SEE MORE</button>
                 </div>
             </div>
@@ -254,7 +252,7 @@
                         <button class="content-button ux-flow-button">SEE MORE</button>
                     </div>
                     <div class="content-right ux-flow-right">
-                        something
+                        <img class="main-content ux-flow-main-image" src="img/flow-chart.png">
                     </div>
                 </div>
             </div>
@@ -289,11 +287,13 @@
             <div class="content-inner thank-you-content-inner">
                 <div class="content-inner thank-you-content-inner">
                     <div class="content-left thank-you-left flex-column-left">
-                        <h1 class="content-title thank-you-title">제목</h1>
-                        <p class="content-text thank-you-text">내용</p>
+                        <h1 class="content-title thank-you-title">감사합니다.</h1>
+                        <p class="content-text thank-you-text">Thank you.</p>
                     </div>
                     <div class="content-right thank-you-right">
-                        something
+                        <div class="main-content thank-you-main-text-container">
+                            <h1 class="thank-you-main-text">merci beaucoup</h1>
+                        </div>
                     </div>
                 </div>
             </div>
