--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -247,8 +247,8 @@
             <div class="content-inner ux-flow-content-inner">
                 <div class="content-inner ux-flow-content-inner">
                     <div class="content-left ux-flow-left flex-column-left">
-                        <h1 class="content-title ux-flow-title">제목</h1>
-                        <p class="content-text ux-flow-text">내용</p>
+                        <h1 class="content-title ux-flow-title">UX</h1>
+                        <p class="content-text ux-flow-text">저희 프로젝트의 Flow Chart입니다.</p>
                         <button class="content-button ux-flow-button">SEE MORE</button>
                     </div>
                     <div class="content-right ux-flow-right">
