--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -1,6 +1,8 @@
 <head>
     <title>INFINITY Studios</title>
 
+    <meta charset="utf-8">
+
     <link rel="stylesheet" type="text/css" href="style/presentation.css">
     <script src="scripts/presentation.js"></script>
 
