--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
         <div class="wrap">
-            <div class="wrap-inner">
+            <div class="wrap-inner" id="wrap-inner">
                 <div id="content"></div>
             </div>
         </div>
